# BoostSimdWork

./: CMakeLists.txt  README.md  compile.sh
boost_vec_tests/: CMakeLists.txt
boost_vec_tests/BenchmarkFramework/: testBoost.cxx
boost_vec_tests/inc/: Implementation.h  backend.h
cmake/modules/: FindBOOSTSIMD.cmake
